Did some work on the room db, more work is need to be done.

--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -18,6 +18,7 @@
 
         <LinearLayout
             android:layout_width="233dp"
+            android:layout_marginLeft="10dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
