--- a/app/src/main/res/layout/fragment_view_comment.xml
+++ b/app/src/main/res/layout/fragment_view_comment.xml
@@ -4,16 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
     tools:context=".Fragments.ViewCommentFragment"
     android:orientation="vertical">
+
     <ImageView
         android:id="@+id/comment_created_user_image"
-        tools:srcCompat="@tools:sample/avatars"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:contentDescription="userImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:scaleType="fitStart"
+        tools:srcCompat="@tools:sample/avatars" />
     <TextView
         android:id="@+id/comment_user_name"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
