--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_jobRequestList_to_jobRequestView"
             app:destination="@id/jobRequestView" />
+        <action
+            android:id="@+id/action_jobRequestList_to_imageButtonAdd"
+            app:destination="@id/imageButtonAdd" />
     </fragment>
 
     <fragment
@@ -59,6 +62,6 @@
         tools:layout="@layout/fragment_edit_job_request" />
 
     <!-- Global actions-->
-    <action android:id="@+id/action_global_imageButtonAdd" app:destination="@id/imageButtonAdd"/>
+    <action android:id="@+id/action_global_imageButtonAdd" app:destination="@id/imageButtonAdd" />
 
 </navigation>
