--- a/app/src/main/res/layout/fragment_user_view.xml
+++ b/app/src/main/res/layout/fragment_user_view.xml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.UserViewFragment">
+    android:layout_marginTop="10dp"
+    android:layout_marginStart="10dp"
+    tools:context=".Fragments.UserViewFragment"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:id="@+id/user_view_created_user_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:contentDescription="userImage"
+        android:scaleType="fitStart"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <TextView
+        android:id="@+id/user_view_user_name"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/user_view_email"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/user_view_address"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/user_view_customer_or_handyman"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/user_view_category"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/user_view_area"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <ProgressBar
+        android:id="@+id/user_view_image_pb"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
