--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,223 +1,270 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:clickable="true"
+    android:orientation="vertical"
     tools:context=".Fragments.RegisterFragment">
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="428dp"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/avatarImgView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="70dp"
+                    android:layout_weight="1"
+                    tools:src="@tools:sample/avatars" />
+
+                <Button
+                    android:id="@+id/addPictureBtn"
+                    android:layout_width="141dp"
+                    android:layout_height="88dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="39dp"
+                    android:layout_marginBottom="50dp"
+                    android:layout_toStartOf="@+id/avatarImgView"
+                    android:text="Choose photo" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/textViewName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Name:"
+                    android:textAlignment="viewStart"
+                    android:textSize="24sp" />
+
+                <EditText
+                    android:id="@+id/editTextName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="65dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_toEndOf="@+id/textViewName"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/textViewEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Email:"
+                    android:textAlignment="viewStart"
+                    android:textSize="24sp" />
+
+                <EditText
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="67dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_toEndOf="@+id/textViewEmail"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/textViewPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Password:"
+                    android:textAlignment="viewStart"
+                    android:textSize="24sp" />
+
+                <EditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_toEndOf="@+id/textViewPassword"
+                    android:layout_toRightOf="@id/textViewPassword"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/newFragmenttextViewAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Address:"
+                    android:textAlignment="viewStart"
+                    android:textSize="24sp" />
+
+                <EditText
+                    android:id="@+id/editTextAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_toEndOf="@+id/newFragmenttextViewAddress"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:id="@+id/CustomerRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginRight="80dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/CustomerRadioBtnTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/CustomerRadioButton"
+                    android:text="Customer"
+                    android:textAlignment="textStart"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:id="@+id/HandyManRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginRight="80dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/HandyManRadioBtnTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/HandyManRadioButton"
+                    android:text="Handy-man"
+                    android:textAlignment="textStart"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="132dp"
         android:orientation="vertical">
 
-        <!-- Name input -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            >
-
-            <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="20dp"
-                android:textAlignment="viewStart"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/textViewName"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
-
-        <!-- Email input -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textViewEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="20dp"
-                android:text="Email"
-                android:textAlignment="viewStart"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/textViewEmail"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
-
-        <!-- Password input -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textViewPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="20dp"
-                android:text="Password"
-                android:textAlignment="viewStart"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/textViewPassword"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
-
-        <!-- Address input -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/newFragmenttextViewAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Address"
-                android:textAlignment="viewStart"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="20dp"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/newFragmenttextViewAddress"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
-
-        <!-- Customer button -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <RadioButton
-                android:id="@+id/CustomerRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="80dp"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/CustomerRadioBtnTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/CustomerRadioButton"
-                android:text="Customer"
-                android:textAlignment="textStart"
-                android:textSize="18sp" />
-        </RelativeLayout>
-
-        <!-- Handy man button -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <RadioButton
-                android:id="@+id/HandyManRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="80dp"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/HandyManRadioBtnTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/HandyManRadioButton"
-                android:text="Handy-man"
-                android:textAlignment="textStart"
-                android:textSize="18sp" />
-        </RelativeLayout>
-
-        <!-- Categories drop down menu -->
         <Spinner
             android:id="@+id/DropDownCategories"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
+            android:layout_weight="1"
             android:background="?attr/colorButtonNormal"
             android:spinnerMode="dropdown" />
 
-        <!-- Areas drop down menu -->
         <Spinner
             android:id="@+id/DropDownAreas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
+            android:layout_weight="1"
             android:background="?attr/colorButtonNormal"
             android:spinnerMode="dropdown" />
-
-        <!-- Save button -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryWhite"
-            >
-            <Button
-                android:id="@+id/saveBtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:background="@color/colorPrimary"
-                android:text="Save" />
-            <Button
-                android:id="@+id/addPictureBtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:layout_marginLeft="5dp"
-                android:background="@color/colorPrimary"
-                android:text="Add picture" />
-
-        </LinearLayout>
-
-        <!-- Progress bar will be shown only after saved pressed -->
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="30dp"
-            android:layout_gravity="center|bottom"
-            android:layout_marginBottom="20dp"
-            android:visibility="gone"
-            android:layout_height="30dp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_weight="1"
+        android:background="@color/colorPrimaryWhite">
+
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="825dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:background="@color/colorPrimary"
+            android:text="Save" />
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
+
 </LinearLayout>
