--- a/app/src/main/res/layout/fragment_job_request_view.xml
+++ b/app/src/main/res/layout/fragment_job_request_view.xml
@@ -33,6 +33,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_weight="1"
                 android:layout_height="wrap_content">
 
                 <LinearLayout
@@ -65,16 +66,27 @@
                         app:layout_constraintTop_toBottomOf="@+id/job_view_date_value"
                         app:layout_constraintVertical_bias="0.19" />
 
-                    <TextView
-                        android:id="@+id/job_view_description_value"
+                    <androidx.core.widget.NestedScrollView
                         android:layout_width="match_parent"
+                        android:layout_marginTop="5dp"
                         android:layout_marginLeft="10dp"
-                        android:layout_height="78dp"
-                        android:text="TextView"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorPrimaryBlack"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/job_view_user_image"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/job_view_address_value" />
+                        app:layout_constraintTop_toBottomOf="@+id/job_view_address_value"
+                        >
+                        <TextView
+                            android:id="@+id/job_view_description_value"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="2dp"
+                            android:layout_margin="2dp"
+                            android:background="@color/colorPrimaryWhite"
+                            android:text="TextView"
+                            />
+                    </androidx.core.widget.NestedScrollView>
                 </LinearLayout>
 
                         <LinearLayout
@@ -105,14 +117,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
-            android:layout_weight="0.75"
+            android:layout_weight="1"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="397dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.55"
+            android:layout_weight="1.75"
             android:orientation="horizontal">
 
             <Button
