--- a/app/src/main/res/layout/fragment_view_comment.xml
+++ b/app/src/main/res/layout/fragment_view_comment.xml
@@ -25,8 +25,16 @@
         android:id="@+id/comment_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/comment_view_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="350dp" />
+
+    <Button
+        android:id="@+id/editCommentBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Edit Comment" />
 </LinearLayout>
