--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -23,6 +23,12 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/commentDateTextViewInRow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Name" />
+
+            <TextView
                 android:id="@+id/commentNameTextViewInRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,7 +36,7 @@
 
             <TextView
                 android:id="@+id/commentTextView"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="comment" />
